[package]
name = "backtester_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strategy_backtester = { path = "../strategy_backtester" }
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
chrono = { version = "0.4.23", features = ["serde"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4"] }
serde_json = "1.0"
queues = "1.1"